<resources>
    <string name="app_name">Cafe</string>
    <string name="title_logo">Welcome!</string>
    <string name="hint_name">Nombre:</string>
    <string name="hint_password">Password:</string>
    <string name="button">ENTRAR</string>
    <string name="description">Imagen del logotipo de la app de pedidos</string>
    <string name="greetings">¡Hola, %s! ¿Que te apetece tomar?</string>
    <string name="radio_tea">Tea</string>
    <string name="radio_coffee">Coffee</string>
    <string name="additives">¿Que añadir en vuestro %s</string>
    <string name="checkboxSugar">Azucar</string>
    <string name="checkboxMilk">Leche</string>
    <string name="checkboxLemon">Limon</string>
    <string name="choose_drink_type">Elige tipo de bebida:</string>


    <array name="types_of_tea">
        <item>Verde</item>
        <item>Rojo</item>
        <item>Negro</item>
    </array>

    <array name="types_of_coffee">
        <item>Cortado</item>
        <item>Cortado descafenado</item>
    </array>
    <string name="button_makeOrder">HACER PEDIDO</string>
    <string name="label_name">Nombre: </string>
    <string name="name">%s</string>
    <string name="label_drink">Bebida: </string>
    <string name="drink">%s</string>
    <string name="label_drinkType">Tipo de bebida: </string>
    <string name="drinkType">%s</string>
    <string name="additives_add">%s</string>
    <string name="label_additives">Tipo de aditivos: </string>
    <string name="error_fields_empty">Rellena los campos vacios</string>
</resources>